--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,9 @@ body {
 button {
   cursor: pointer;
 }
-
+button:hover {
+  background-color: #2196f3;
+}
 .header-list {
   list-style-type: none;
 }
