--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@700&display=swap"); */
 body {
   font-family: "Roboto", sans-serif;
-  color: #212121; /*"Roboto", "Raleway", sans-serif inherit; */
+  color: #212121;
+  /*"Roboto", "Raleway", sans-serif inherit; */
 }
 button {
   cursor: pointer;
